syntax = 'proto3';

package grit;

message ListArtistsRequest {
  string library_id = 1;
}

message ListArtistsResponse {
  repeated string artists = 1;
}

service Library {
  rpc ListArtists(ListArtistsRequest) returns (ListArtistsResponse);
}
